# LocalMedia

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  storage.rs
src/components/: BatchModal.tsx  CutRange.tsx  FileCard.tsx  HomeHelpModal.tsx  HomeView.tsx  QueuePanel.tsx  StorageModal.tsx  TaskModal.tsx  TopBar.tsx
src/components/editor/: ClipProps.tsx  EditorView.tsx  HelpModal.tsx  PreviewStage.tsx  Timeline.tsx
src/lib/: backend.ts  capabilities.ts  i18n.ts  presets.ts  probe.ts  theme.ts  time.ts  types.ts
src/lib/__tests__/: capabilities.test.ts  presets.test.ts  probe.test.ts  time.test.ts
src/lib/editor/: model.ts  render.ts
src/lib/editor/__tests__/: model.test.ts  render.test.ts
src/state/: editor.ts  store.ts  ui.ts
